src/test/deca/context/invalid/oracle/wrong_two_equals.deca
{
    bool x;
    x = 5 = 2;
}